--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Base application theme -->
+    <style name="Theme.ParkingBikers" parent="android:Theme.Material.Light.NoActionBar">
 
-    <style name="Theme.ParkingBikers" parent="android:Theme.Material.Light.NoActionBar" />
+        <item name="android:statusBarColor">@color/blue</item>
+    </style>
 </resources>
